<resources>
	<string name="app_name">QuestEasy</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_home">HomeActivity</string>
	<string name="insertDcard">dichiarazione</string>
	<string name="formTitleBar">ospite</string>
	<string name="settingsNav">impostazioni</string>
	<string name="aboutNav">info</string>
	<string name="categoryS">singolo</string>
	<string name="categoryF">famiglia</string>
	<string name="categoryG">gruppo</string>
	<string name="saveDecMenuItem">Salva</string>
	<string name="actionExport">Esporta</string>
	<string name="actionDelete">Elimina</string>
	<string name="confirmGuestForm">conferma ospite</string>
	<string name="personalDataGuest">Dati personali</string>
	<string name="permanenzaHint">30</string>
	<string name="nameGuest">Nome</string>
	<string name="surnameGuest">Cognome</string>
	<string name="sexGuest">Sesso</string>
	<string name="sexMen">Uomo</string>
	<string name="sexWoman">Donna</string>
	<string name="dateBirthGuest">Data di nascita</string>
	<string name="cittadinanzaGuest">Cittadinanza</string>
	<string name="luogoGuest">Luogo di nascita</string>
	<string name="documentoGuest">Documento</string>
	<string name="codeDocumentoGuest">Codice</string>
	<string name="permanenzaGiorni">Giorni di permanenza</string>
	<string name="numberDocumentoGuest">Numero documento</string>
	<string name="placeDocumentoGuest">Luogo di rilascio</string>
	<string name="speech_prompt">&#8230;</string>
	<string name="speech_not_supported">Il dispositivo non supporta questa funzione</string>
	<string name="categoryNameSingle">Singolo</string>
	<string name="categoryNameGroup">Capogruppo</string>
	<string name="categoryNameFamily">Capofamiglia</string>
    <string name="developInfo">Questa applicazione è stata sviluppata da:
        \n\n\t\t\t\tEnrico Testori
		\n\t\t\t\tSimone Calciolari \n\t\t\t\tGianluca Apriceno\n
    </string>

	<string name="modExam">Modalità esame</string>
	<string name="saveGuestCard">salva ospiti</string>
	<string name="cardTitleBar">ospiti</string>
	<string name="saveDialogTitle">Salva su</string>
	<string name="okButton">OK</string>
	<string name="cancelButton">CANCELLA</string>
	<string name="filterDialotTitle">Filtra per</string>

	<string name ="saveForm">Salva</string>

	<string name="bottomPhoto">Scatta foto</string>
	<string name="bottomVoice">Parla</string>
	<string name="bottomGallery">Galleria</string>

	<string name="errorPermanenza">Inserire permanenza minore di 31 giorni</string>

	<string name ="opendDrawer">drawer aperto</string>
	<string name ="closeDrawer">drawer chiuso</string>

	<string name ="nameUser">Nome utente</string>

	<!-- FIRST TUTORIAL STEP-->
	<string name="welcome">Benvenuto!</string>
	<string name="first_desc">Per cominciare ad aggiungere dichiarazioni clicca il bottone in basso a destra.
			Puoi aprire una dichiarazione al giorno</string>

	<!-- SECOND TUTORIAL STEP-->
	<string name="second_step_title">Inserisci nuovi arrivi</string>
	<string name="second_step_desc">Qui puoi cominciare ad inserire i tuoi arrivi di oggi.\n
			Gli arrivi sono distinti in 3 categorie: ospiti singoli, gruppi o famiglie.\n
			Clicca sul bottone in basso a destra e inserisci i tuoi primi ospiti!</string>

	<!-- THIRD TUTORIAL STEP-->
	<string name="third_step_title">Inserisci nuovi arrivi</string>
	<string name="third_step_desc">Qui puoi cominciare ad inserire i tuoi arrivi di oggi.\n
			Gli arrivi sono distinti in 3 categorie: ospiti singoli, gruppi o famiglie.\n
			Clicca sul bottone in basso a destra e inserisci i tuoi primi ospiti!</string>

	<!-- FOURTH TUTORIAL STEP-->
	<string name="fourth_step_title">Galleria immagini</string>
	<string name="fourth_step_desc">In questa schermata puoi trovare le foto che hai scattato.\n.
		Puoi anche compilare i campi tramite comandi vocali tenendo premuto il bottone in basso a destra e rilasciandolo al termine.\n
		Trovi maggiori informazioni sui comandi vocali nella guida.</string>

	<!-- FIFTH TUTORIAL STEP-->
	<string name="fifth_step_title">Congratulazioni!</string>
	<string name="fifth_step_desc">Ora che hai creato il tuo primo capifamiglia/capogruppo puoi
	cominciare ad aggiungere altri membi che verranno salvati in automatico.\n
	Puoi aggiungerne quanti vuoi e quando hai finito puoi tornare in tutta tranquillità alla schermata
	precedente.</string>

	<!-- VOCAL API GUIDE -->
	<string name="api_menu_title">Guida comandi vocali</string>
	<string name="api_guide_intro"><![CDATA[<p>I vari dati dell\'ospite possono essere inseriti tramite comandi vocali che
	seguono dei pattern prestabiliti.<br>
	<b>NOTA: il risualtato di tale operazione dipende molto dalla qualità del microfono e dal rumore di sottofondo.</b></p>
	<h2>Permanenza</h2>]]></string>
	<string name="api_guide_part_2"><![CDATA[<h2>Dati personali</h2>]]></string>
	<string name="api_guide_part_3"><![CDATA[<h2>Dati Documento</h2>]]></string>
	<string name="caso_1">Caso 1</string>
	<string name="permanenza_x_giorni">Permanenza x giorni</string>
	<string name="caso_2">Caso 2</string>
	<string name="x_giorni_di_permanenza">x giorni di permanenza</string>
	<string name="caso_3">Caso 3</string>
	<string name="signor_a_nome_cognome">signor[a] nome cognome</string>
	<string name="caso_4">Caso 4</string>
	<string name="nato_a_a_in_luogo">nato/a a/in luogo</string>
	<string name="caso_5">Caso 5</string>
	<string name="cittadinanza_luogo">cittadinanza luogo</string>
	<string name="caso_6">Caso 6</string>
	<string name="carta_di_identit_numero_x_rilasciata_a_in_luogo">Carta di identità numero x rilasciata a/in luogo</string>

	<!-- REMOTE API REQUEST EXCEPTIONS -->
	<string name="citizenship_json_exception">Stato inesistente</string>
	<string name="remote_api_net_error">Errore di rete</string>
	<string name="place_json_exception">Luogo inesistente</string>
	<string name="document_json_exception">Documento inesistente</string>

	<!-- PERMISSIONS STUFF -->
	<string name="permission_none">Non hai fornito i permessi</string>
	<string name="camera_none">Permessi fotocamera mancanti!</string>
	<string name="storage_none">Permessi archiviazione mancanti!</string>
	<string name="vocal_none">Permessi audio mancanti!"</string>
</resources>
