<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.NewCardActivity">

    <Button
        android:id="@+id/singleGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/user_single2"/>
    <TextView
        android:id="@+id/singleGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleGuest"
        android:layout_centerInParent="true"
        android:text="@string/categoryS"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/familyGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/user_family2"/>
    <TextView
        android:id="@+id/familyGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryF"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        />
    <Button
        android:id="@+id/groupGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/user_group2"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
         />
    <TextView
        android:id="@+id/groupGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryG"
        android:textSize="30sp"
        android:layout_below="@id/groupGuest"
        android:layout_centerInParent="true"
        />



</RelativeLayout>
