<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.NewCardActivity">

    <Button
        android:id="@+id/singleGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/guest_single_category"/>
    <TextView
        android:id="@+id/singleGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleGuest"
        android:layout_marginLeft="60dp"
        android:textSize="30sp"
        android:text="@string/categoryS"
        />
    <Button
        android:id="@+id/familyGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:background="@drawable/guest_family_category"/>
    <TextView
        android:id="@+id/familyGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryF"
        android:layout_alignTop="@id/singleGuestLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/groupGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/guest_group_category"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
         />
    <TextView
        android:id="@+id/groupGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryG"
        android:textSize="30sp"
        android:layout_alignTop="@id/singleGuestLabel"
        android:layout_centerInParent="true"
         />



</RelativeLayout>
