<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.EditDecActivity">



    <ListView
        android:id="@+id/cardlistView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <FrameLayout
        android:id="@+id/frameButtonCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_overlay"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/categoryGuestGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_openDirection="up"
            fab:menu_labels_position="left"
            >

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/categoryGuestGroupGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                android:src="@drawable/guest_group3"
                fab:fab_label="@string/categoryG"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/categoryGuestFamilyGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                android:src="@drawable/guest_family3"
                fab:fab_label="@string/categoryF"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/categoryGuestSingleGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_label="@string/categoryS"
                android:src="@drawable/guest_single3"
                />

        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>



</RelativeLayout>
