<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  	android:orientation="vertical"
			  	android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginRight="10dp"
				android:layout_marginLeft="10dp"
	>
	<TextView
		android:id="@+id/person_document_Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/person_citizenship_imageView"
		android:layout_marginTop="20dp"
		android:text="@string/documentoGuest"
		android:textSize="20sp"
		/>
	<ImageView
		android:id="@+id/person_identityCard_imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="20dp"
		android:layout_below="@id/person_document_Title"
		android:src="@drawable/icon_identification_card_form_guest"
		/>

	<!--<EditText
		android:id="@+id/editText_documentoCodice_guest_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"

		android:maxLength="60"
		android:layout_marginLeft="46dp"
		android:layout_marginStart="46dp"
		android:textSize="15sp"
		android:layout_below="@id/person_document_Title"
		android:hint="@string/codeDocumentoGuest"
		/>-->

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/docTypeFrameLayout"
		android:layout_alignBottom="@+id/person_identityCard_imageView"
		android:layout_alignLeft="@+id/editText_documentoNumber_guest_form"
		android:layout_alignStart="@+id/editText_documentoNumber_guest_form">


		<me.hypertesto.questeasy.ui.DelayAutoCompleteTextView
			android:id="@+id/editText_documentoCodice_guest_form"
			android:inputType="textCapSentences"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/documentoGuest"
			android:imeOptions="flagNoExtractUi|actionSearch"
			android:textSize="15dp" />

		<ProgressBar
			android:id="@+id/pb_loading_indicator_doc_type"
			style="?android:attr/progressBarStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|right"


			android:visibility="gone"/>
	</FrameLayout>
	<EditText
		android:id="@+id/editText_documentoNumber_guest_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:maxLength="60"
		android:layout_marginLeft="46dp"
		android:layout_marginStart="46dp"
		android:textSize="15sp"
		android:layout_below="@id/docTypeFrameLayout"
		android:hint="@string/numberDocumentoGuest"
		/>
	<!--<EditText
		android:id="@+id/editText_documentoPlace_guest_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:maxLength="60"
		android:layout_marginLeft="46dp"
		android:layout_marginStart="46dp"
		android:textSize="15sp"
		android:layout_below="@id/editText_documentoNumber_guest_form"
		android:hint="@string/placeDocumentoGuest"
		/>-->

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/editText_documentoNumber_guest_form"
		android:layout_alignLeft="@+id/editText_documentoNumber_guest_form"
		android:layout_alignStart="@+id/editText_documentoNumber_guest_form"
		android:id="@+id/frameLayout">


		<me.hypertesto.questeasy.ui.DelayAutoCompleteTextView
			android:id="@+id/editText_documentoPlace_guest_form"
			android:inputType="textCapSentences"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/placeDocumentoGuest"
			android:imeOptions="flagNoExtractUi|actionSearch"
			android:textSize="15dp" />

		<ProgressBar
			android:id="@+id/pb_loading_indicator_doc"
			style="?android:attr/progressBarStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|right"


			android:visibility="gone"/>
	</FrameLayout>

</RelativeLayout>